--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
       <h1 class="display-2 text-center mb-4">Work Day Planner</h1>
       <p class="text-center mx-5">Need a quick and easy way to plan your day? Our day planner can help.</p>
       <p class="text-center mx-5">Select a timeframe, type your plan and save it so you can see as your day progresses.</p>
-      <div id="todays-date"></div>
-      <div id="current-time"></div>
+      <div class="text-center font-weight-bold"><span id="todays-date"></span> | <span id="current-time"></span></div>
 
       <hr>
    </div>
@@ -45,7 +44,7 @@
 
 
 </body>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/locale/af.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.js" integrity="sha256-dgFbqbQVzjkZPQxWd8PBtzGiRBhChc4I2wO/q/s+Xeo=" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="assets/javascript/script.js"></script>
 </html>
