minor css updates

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
    <!-- this is the main header area -->
    <div class="container mt-5">
-      <h1 class="display-2 text-center mb-4">Work Day Planner</h1>
+      <h1 class="display-2 text-center mb-4 planner-header">Work Day Planner</h1>
       <p class="text-center mx-5">Need a quick and easy way to plan your day? Our day planner can help.</p>
       <p class="text-center mx-5">Select a timeframe, type your plan and save it so you can see as your day progresses.</p>
       <div class="text-center font-weight-bold"><span id="todays-date"></span> | <span id="current-time"></span></div>
