updating sandbox to match live

--- a/sandbox/index-sandbox.html
+++ b/sandbox/index-sandbox.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    <link rel="stylesheet" href="./assets/css/style-sandbox.css">
 
@@ -14,14 +12,13 @@
    <!-- SEO TOUCHPOINTS -->
    <title>Day Planner | Colin Stevens | Web Development Portfolio</title>
 </head>
-
 <body>
    <!-- this is the main header area -->
    <div class="container mt-5">
-      <h1 class="display-2 text-center mb-4">Work Day Planner</h1>
+      <h1 class="display-2 text-center mb-4 planner-header">Work Day Planner</h1>
       <p class="text-center mx-5">Need a quick and easy way to plan your day? Our day planner can help.</p>
-      <p class="text-center mx-5">Select a timeframe, type your plan and save it so you can see as your day progresses.
-      </p>
+      <p class="text-center mx-5">Select a timeframe, type your plan and save it so you can see as your day progresses.</p>
+      <div class="text-center font-weight-bold"><span id="todays-date"></span> | <span id="current-time"></span></div>
 
       <hr>
    </div>
@@ -32,20 +29,14 @@
 
 
 
-      <div class="row row-planner">
+      <!-- <div class="row row-planner">
          <div class="col-md-1 time-of-day" id="time-of-day"></div>
          <div class="col-md-10 daily-notes form-group" id="daily-notes">
-            <form>
-            <textarea class="form-control" id="text-area-one"></textarea>
-            </form>
+            <textarea >
          </div>
-         <div class="col-md-1 save-daily-notes" id="save-daily-notes">
-            <button class="btn btn-save" id="submit-button">
-               <i class="fa fa-save"></i>
-            </button>
-         </div>
+         <div class="col-md-1 save-daily-notes" id="save-daily-notes"></div>
 
-      </div>
+      </div> -->
 
    </div>
 
@@ -53,7 +44,7 @@
 
 
 </body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment-with-locales.js" integrity="sha256-dgFbqbQVzjkZPQxWd8PBtzGiRBhChc4I2wO/q/s+Xeo=" crossorigin="anonymous"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="./assets/javascript/script-sandbox.js"></script>
-
 </html>
